Stable version
-Major Optunization through out the code
-Feedback page implemented
-Anaylitics page implemented
-Pop up added (Toasify)
-Favicon updated
-Alot of bug fixes (example coinbase error on home page)
-Session id bug fixed
-Admin/User user check added and user types added.
-Long lat added to ayanltics table
-Map added (no features)
AND ALOT OF REFOCTORING
-